# platzky

./: .coderabbit.yaml  .coveragerc  .gitignore  .release-please-manifest.json  CHANGELOG.md  CHANGES.md  Makefile  README.md  config.yml.tpl  pyproject.toml  release-please-config.json  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: codeql.yml  gitleaks.yml  license-check.yml  release.yml  semantic-release.yml  sonarcloud.yml  tests.yml  todo.yaml
docs/: api.rst  conf.py  config.rst  database.rst  index.rst  installation.rst  license.rst  plugins.rst  quickstart.rst  telemetry.rst
docs/_ext/: feature_flags.py  plugin_bases.py  plugin_capabilities.py
examples/log_notifier/log_notifier/: __init__.py
examples/plugins/: log_notifier.py  red_letter_plugin.py
examples/plugins/log_notifier/: pyproject.toml
examples/plugins/log_notifier/log_notifier/: __init__.py
examples/plugins/red_letter/: pyproject.toml
examples/plugins/red_letter/red_letter/: __init__.py
examples/red_letter/red_letter/: __init__.py
platzky/: __init__.py  attachment.py  auth.py  config.py  content_types.py  engine.py  feature_flags.py  feature_flags_wrapper.py  mime_validation.py  models.py  notification_result.py  notification_topics.py  notifier.py  page_sections.py  platzky.py  plugin_loader.py  shortcode.py  telemetry.py  www_handler.py
platzky/admin/: admin.py  fake_login.py
platzky/admin/templates/: admin.html  help.html  login.html
platzky/attachment/: __init__.py  attachment.py  constants.py  core.py  factory.py  mime_validation.py
platzky/blog/: blog.py  comment_form.py
platzky/db/: README.md  db.py  db_loader.py  exceptions.py  github_json_db.py  google_json_db.py  graph_ql_db.py  json_db.py  json_file_db.py  mongodb_db.py  stores.py
platzky/debug/: __init__.py  blueprint.py  fake_login.py
platzky/debug/templates/: fake_login_button.html
platzky/locale/en/LC_MESSAGES/: messages.po
platzky/locale/pl/LC_MESSAGES/: messages.po
platzky/login/: login.py
platzky/login/templates/: login.html
platzky/plugin/: __init__.py  content_filter.py  content_transformer.py  html_injector.py  login.py  notifier.py  page_decorator.py  plugin.py  plugin_config.py  plugin_loader.py
platzky/seo/: seo.py
platzky/shortcodes/: __init__.py  _url.py  builtins.py  hero.py  image.py  link.py  shortcode.py
platzky/static/: blog.css  styles.css
platzky/templates/: 404.html  base.html  body_meta.html  dynamic_css.html  head_meta.html  page.html  post.html  robots.txt
tests/e2e_tests/: e2e_test_config.yml  e2e_test_data.json  e2e_test_data.template.json
tests/e2e_tests/cypress/e2e/: admin_test.cy.js  examples_test.cy.js  language_test.cy.js  simple_test.cy.js
tests/unit_tests/: fake_app.py  test_attachment.py  test_blog.py  test_config.py  test_db_loading.py  test_engine.py  test_models.py  test_platzky.py  test_plugin_loader.py  test_seo.py  test_shortcode.py  test_shortcode_builtins.py  test_telemetry.py
tests/unit_tests/admin/: test_admin.py
tests/unit_tests/blog/: test_blog.py
tests/unit_tests/db/: test_cache.py  test_db.py  test_github_json_db.py  test_google_json_db.py  test_graph_ql_db.py  test_json_db.py  test_json_file_db.py  test_mongodb_db.py
tests/unit_tests/plugin/: fake_plugin.py  test_capability_plugins.py  test_plugin_bases.py  test_plugin_loader.py  test_plugin_translations.py
tests/unit_tests/test_data/: config_with_flags.yml
