[tool.poetry]
name = "platzky"
version = "2.0.0-alpha.5"
description = "Not only blog engine"
authors = []
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.1.0"
PyYAML = "^6.0"
Flask-Babel = "^4.0.0"
Flask-WTF = "^1.2.1"
gql = ">=3.4,<5.0"
aiohttp = "^3.13.3"
Flask-Minify = "^0.50"
google-cloud-storage = ">=2.5,<4.0"
humanize = "^4.9.0"
pydantic = "^2.7.1"
deprecation = "^2.1.0"
pygithub = "^2.6.1"
pymongo = "^4.7.0"
sphinx = {version = "^8.0.0", optional = true}
sphinx-rtd-theme = {version = "^3.0.0", optional = true}
tomli = {version = "^2.0.0", optional = true}
myst-parser = {version = "^4.0.0", optional = true}
opentelemetry-api = {version = ">=1.39.0,<2.0.0", optional = true}
opentelemetry-sdk = {version = ">=1.39.0,<2.0.0", optional = true}
opentelemetry-instrumentation-flask = {version = ">=0.50b0,<1.0.0", optional = true}
opentelemetry-instrumentation-logging = {version = ">=0.50b0,<1.0.0", optional = true}
opentelemetry-exporter-otlp-proto-grpc = {version = ">=1.39.0,<2.0.0", optional = true}
puremagic = "^1.30"

[tool.poetry.extras]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "myst-parser",
    "tomli"
]
telemetry = [
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-instrumentation-flask",
    "opentelemetry-instrumentation-logging",
    "opentelemetry-exporter-otlp-proto-grpc"
]

[tool.poetry.group.dev.dependencies]
log-notifier = {path = "examples/plugins/log_notifier", develop = true}
red-letter = {path = "examples/plugins/red_letter", develop = true}
pytest = ">=8.2.1,<10.0.0"
coverage = "^7.5.1"
pytest-cov = ">=5,<8"
freezegun = "^1.2.2"
black = "^26.3.1"
ruff = ">=0.4.4,<0.16.0"
pyright = "^1.1.364"
beautifulsoup4 = "^4.12.3"
interrogate = "^1.7.0"
opentelemetry-api = ">=1.39.0,<2.0.0"
opentelemetry-sdk = ">=1.39.0,<2.0.0"
opentelemetry-instrumentation-flask = ">=0.50b0,<1.0.0"
opentelemetry-instrumentation-logging = ">=0.50b0,<1.0.0"
opentelemetry-exporter-otlp-proto-grpc = ">=1.39.0,<2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
source = ["platzky"]
omit = [
    "tests/*",
    "*/site-packages/*"
]

[tool.coverage.report]
exclude_lines = [
    "@abstractmethod",
    "@abc.abstractmethod",
    "if TYPE_CHECKING:",
    "pragma: no cover"
]
fail_under = 70
show_missing = true

[tool.pyright]
pythonVersion = "3.10"
pythonPlatform = "All"
typeCheckingMode = "strict"
exclude = ["docs"]  # Sphinx extension has optional deps not in dev group
reportMissingImports = true
reportMissingTypeStubs = false
reportMissingParameterType = false
reportUnknownArgumentType = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownParameterType = false
reportUnusedFunction = false
reportUnnecessaryTypeIgnoreComment = true
reportUntypedClassDecorator = false
reportUnusedClass = false
reportUntypedBaseClass = false

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
show-fixes = true
lint.select = [
    "I",   # isort
    "F",   # Pyflakes
    "E",   # pycodestyle Error
    "W",   # pycodestyle Warning
    "RUF", # Ruff-specific rules
    "ANN", # flake8-annotations (type annotations)
    "ARG", # flake8-unused-arguments
]
lint.ignore = [
    # TODO: Gradually add type annotations across the codebase
    "ANN002",  # Missing type annotation for *args
    "ANN003",  # Missing type annotation for **kwargs
    "ANN201",  # Missing return type annotation for public function
    "ANN202",  # Missing return type annotation for private function
    "ANN204"   # Missing return type annotation for special method
]

[tool.pytest.ini_options]
markers = [
    "skip_coverage: skip coverage for this test"
]

[tool.interrogate]
fail-under = 88
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-private = true
ignore-semiprivate = false
exclude = ["tests", "docs"]
