[tool.poetry]
name = "red-letter"
version = "0.1.0"
description = "Example platzky content-transformer plugin — colours 'a' letters red and adds a [red] shortcode."
authors = []

[tool.poetry.dependencies]
python = "^3.10"
platzky = "*"

[tool.poetry.plugins."platzky.plugins"]
red_letter = "red_letter:RedLetterPlugin"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
